[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Kaneko"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.11.4"
scikit-learn = "^1.3.2"
jupyterlab = "^4.0.9"
shapely = "^2.0.2"
cartopy = "^0.22.0"
seaborn = "^0.13.0"
pandas = "^2.1.4"
tqdm = "^4.66.1"
xarray = "^2023.12.0"
zarr = "^2.16.1"
netcdf4 = "^1.6.5"
numba = "^0.58.1"
jupyterlab-code-formatter = "^2.2.1"


[tool.poetry.group.dev.dependencies]
notebook = "^7.0.6"
black = "^23.12.1"
flake8 = "^6.1.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
